Tests for reservations
